# ld2450-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  justfile
.github/workflows/: ci.yml  release.yml
config/: ld2450d.toml
crates/ld2450-ctl/: Cargo.toml
crates/ld2450-ctl/src/: main.rs
crates/ld2450-proto/: Cargo.toml  README.md
crates/ld2450-proto/src/: command.rs  frame.rs  lib.rs  types.rs
crates/ld2450d/: Cargo.toml
crates/ld2450d/src/: config.rs  main.rs  socket.rs  uart.rs
deploy/: ld2450d.service  ld2450d.tmpfiles
