[package]
name = "ld2450-ctl"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HLK-LD2450 radar sensor configuration CLI"

[dependencies]
ld2450-proto = { path = "../ld2450-proto" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serialport = { version = "4", default-features = false }
