[package]
name = "ld2450d"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HLK-LD2450 radar sensor streaming daemon"

[dependencies]
ld2450-proto = { path = "../ld2450-proto" }
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "signal", "sync", "time"] }
tokio-serial = { version = "5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
